--- a/result.html
+++ b/result.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Specer, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Specer | Template</title>
+    <title>APS</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
         <div class="header__top--canvas">
             <div class="ht-info">
                 <ul>
-                    <li>20:00 - May 19, 2019</li>
+                    <!-- <li>20:00 - May 19, 2019</li> -->
                     <li><a href="#">Sign in</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -58,7 +58,7 @@
             <li><a href="./club.html">Players</a></li>
             <li><a href="./schedule.html">Schedule</a></li>
             <li><a href="./result.html">Results</a></li>
-            <li><a href="#">Sport</a></li>
+            <!-- <li><a href="#">Sport</a></li> -->
             <li><a href="#">Pages</a>
                 <ul class="dropdown">
                     <li><a href="./blog.html">Blog</a></li>
@@ -81,7 +81,7 @@
                     <div class="col-lg-6">
                         <div class="ht-info">
                             <ul>
-                                <li>20:00 - May 19, 2019</li>
+                                <!-- <li>20:00 - May 19, 2019</li> -->
                                 <li><a href="#">Sign in</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
@@ -114,7 +114,7 @@
                                 <li><a href="./club.html">Club</a></li>
                                 <li><a href="./schedule.html">Schedule</a></li>
                                 <li class="active"><a href="./result.html">Results</a></li>
-                                <li><a href="#">Sport</a></li>
+                                <!-- <li><a href="#">Sport</a></li> -->
                                 <li><a href="#">Pages</a>
                                     <ul class="dropdown">
                                         <li><a href="./blog.html">Blog</a></li>
@@ -145,7 +145,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="bs-text">
-                        <h2>Our Results</h2>
+                        <h2>Results</h2>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
             <div class="row">
                 <div class="col-lg-8 left-blog-pad">
                     <div class="schedule-text">
-                        <h4 class="st-title">World Cup 2019</h4>
+                        <h4 class="st-title">Tournaments Results</h4>
                         <div class="st-table">
                             <table>
                                 <tbody>
@@ -295,44 +295,44 @@
                                 <h5>Schedule</h5>
                             </div>
                             <ul>
-                                <li><a href="#">Saturday, 15 June 2019</a></li>
-                                <li><a href="#">Sunday, 16 June 2019</a></li>
-                                <li><a href="#">Monday, 17 June 2019</a></li>
-                                <li><a href="#">Tuesday, 18 June 2019</a></li>
-                                <li><a href="#">Wednesday, 19 June 2019</a></li>
-                                <li><a href="#">Thursday, 20 June 2019</a></li>
-                                <li><a href="#">Friday, 21 June 2019</a></li>
-                                <li><a href="#">Saturday, 22 June 2019</a></li>
-                                <li><a href="#">Sunday, 23 June 2019</a></li>
-                                <li><a href="#">Monday, 24 June 2019</a></li>
+                                <li><a href="#">15 June 2024 - 15 July 2024</a></li>
+                                <li><a href="#">16 June 2024 - 16 July 2024</a></li>
+                                <li><a href="#">17 June 2024 - 17 July 2024</a></li>
+                                <li><a href="#">18 June 2024 - 18 July 2024</a></li>
+                                <li><a href="#">19 June 2024 - 19 July 2024</a></li>
+                                <li><a href="#">1 June 2024 - 1 July 2024</a></li>
+                                <li><a href="#">2 June 2024 - 2 July 2024</a></li>
+                                <li><a href="#">3 June 2024 - 3 July 2024</a></li>
+                                <li><a href="#">4 June 2024 - 4 July 2024</a></li>
+                                <li><a href="#">5 June 2024 - 5 July 2024</a></li>
                             </ul>
                         </div>
                         <div class="ss-league">
                             <div class="section-title sidebar-title">
-                                <h5>Top Leagues</h5>
+                                <h5>Top Players</h5>
                             </div>
                             <a href="#" class="sl-item">
                                 <img src="img/flag/flag-1.jpg" alt="">
-                                <span>Afghanis</span>
+                                <span>Rahul</span>
                             </a>
                             <a href="#" class="sl-item">
                                 <img src="img/flag/flag-2.jpg" alt="">
-                                <span>Australia</span>
+                                <span>Gyan</span>
                             </a>
                             <a href="#" class="sl-item">
                                 <img src="img/flag/flag-3.jpg" alt="">
-                                <span>Qatar</span>
+                                <span>Saurav</span>
                             </a>
                             <a href="#" class="sl-item">
                                 <img src="img/flag/flag-4.jpg" alt="">
-                                <span>Cambodia</span>
+                                <span>Gaurav</span>
                             </a>
                             <a href="#" class="sl-item">
                                 <img src="img/flag/flag-5.jpg" alt="">
-                                <span>Uzbekistan</span>
+                                <span>Varun</span>
                             </a>
                         </div>
-                        <div class="ss-widget other-sport">
+                        <!-- <div class="ss-widget other-sport">
                             <div class="section-title sidebar-title">
                                 <h5>Other Sport</h5>
                             </div>
@@ -348,7 +348,7 @@
                                 <li><a href="#">Boxing</a></li>
                                 <li><a href="#">Cycling</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -356,90 +356,83 @@
     </section>
     <!-- Results Section End -->
 
-    <!-- Footer Section Begin -->
-    <footer class="footer-section set-bg" data-setbg="img/footer-bg.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="fs-logo">
-                        <div class="logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
-                        </div>
-                        <ul>
-                            <li><i class="fa fa-envelope"></i> Info.colorlib@gmail.com</li>
-                            <li><i class="fa fa-copy"></i> +(12) 345 6789 10</li>
-                            <li><i class="fa fa-thumb-tack"></i> 40 Baria Sreet 133/2 New York City, United State</li>
-                        </ul>
-                        <div class="fs-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-tumblr"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                        </div>
+     <!-- Footer Section Begin -->
+  <footer class="footer-section set-bg" data-setbg="img/footer-bg.jpg">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <div class="fs-logo">
+                    <div class="logo">
+                        <a href="./index.html"><img src="img/logo.png" alt="" style="height: 32px;"></a>
+                    </div>
+                    <ul>
+                        <li><i class="fa fa-envelope"></i> Info@aps.com</li>
+                        <li><i class="fa fa-copy"></i> +(91) 6202824886 </li>
+                        <li><i class="fa fa-thumb-tack"></i> Chembur , Mumbai</li>
+                    </ul>
+                    <div class="fs-social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-tumblr"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 offset-lg-1">
-                    <div class="fs-widget">
-                        <h4>Top Club</h4>
-                        <ul class="fw-links">
-                            <li><a href="#">Brazil</a></li>
-                            <li><a href="#">Germany</a></li>
-                            <li><a href="#">Italy</a></li>
-                            <li><a href="#">Argentina</a></li>
-                            <li><a href="#">France</a></li>
-                        </ul>
-                        <ul class="fw-links">
-                            <li><a href="#">England</a></li>
-                            <li><a href="#">Netherlands</a></li>
-                            <li><a href="#">Hungary</a></li>
-                            <li><a href="#">Croatia</a></li>
-                            <li><a href="#">Poland</a></li>
-                        </ul>
-                    </div>
+            </div>
+            <div class="col-lg-4 col-md-6 offset-lg-1">
+                <div class="fs-widget">
+                    <h4>Top Links</h4>
+                    <ul class="fw-links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Abot Us</a></li>
+                        <li><a href="#">Players</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Schedule</a></li>
+                    </ul>
+                    <ul class="fw-links">
+                        <li><a href="#">Terms&Conditions</a></li>
+                        <li><a href="#">Refund Policy</a></li>
+                        <li><a href="#">Privacy and policy</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Schedule</a></li>
+                    </ul>
                 </div>
-                <div class="col-lg-4">
-                    <div class="fs-widget">
-                        <h4>Recent News</h4>
+            </div>
+            <div class="col-lg-4">
+                <div class="fs-widget">
+                    <h4>Upcoming Tournament</h4>
 
-                        <div class="fw-item">
-                            <h5><a href="#">England win shows they have the spark to go far at World Cup</a></h5>
-                            <ul>
-                                <li><i class="fa fa-calendar"></i> May 19, 2019</li>
-                                <li><i class="fa fa-edit"></i> 3 Comment</li>
-                            </ul>
-                        </div>
-                        <div class="fw-item">
-                            <h5><a href="#">Sri Lanka v Australia: Cricket World Cup 2019 – live!</a></h5>
-                            <ul>
-                                <li><i class="fa fa-calendar"></i> May 19, 2019</li>
-                                <li><i class="fa fa-edit"></i> 3 Comment</li>
-                            </ul>
-                        </div>
+                    <div class="fw-item">
+                        <h5><a href="#">Webizy - AP Tour</a></h5>
+                        <ul>
+                            <li><i class="fa fa-calendar"></i> May 19, 2024</li>
+                            <!-- <li><i class="fa fa-edit"></i> 3 Comment</li> -->
+                        </ul>
+                    </div>
+                    <div class="fw-item">
+                        <h5><a href="#">Exampil - APS Tour</a></h5>
+                        <ul>
+                            <li><i class="fa fa-calendar"></i> April 19, 2024</li>
+                            <!-- <li><i class="fa fa-edit"></i> 3 Comment</li> -->
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="copyright-option">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
-                        <div class="co-widget">
-                            <ul>
-                                <li><a href="#">Copyright notification</a></li>
-                                <li><a href="#">Terms of Use</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                            </ul>
-                        </div>
+    </div>
+    <div class="container">
+        <div class="copyright-option">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="co-widget">
+                       
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
-    <!-- Footer Section End -->
+    </div>
+</footer>
+<!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
